# Multi-dimensional-encrypted-data-aggregation-and-analysis-system-based-on-intelligent-oil-and-gas-fi

./: MTDS.c  README.md  SocketProject.c  a.c  core  cryptog.h  foo  mad_SocketProject.c  mad_cryptog.c  mad_server.c  mad_signature.c  mcc_SocketProject.c  mcc_cryptog.c  mcc_server.c  mcc_signature.c  mcs_SocketProject.c  mcs_cryptog.c  mcs_server.c  mcs_signature.c  mtd_SocketProject.c  mtd_cryptog.c  mtd_sever.c  mtd_signature.c  signature  signature.c  signature.h
mad/: configure.ac
mad/src/: Makefile.am  SocketProject.c  SocketProject.c~  SocketProject.h  cryptog.c  cryptog.c~  foo  server.c  server.c~  signature.c  signature.c~  signature.h  signature.h~
mcc/: configure.ac
mcc/src/: Makefile.am  SocketProject.c  SocketProject.c~  cryptog.c  cryptog.c~  cryptog.h  cryptog.h~  foo  server.c  server.c~  signature.c  signature.c~  signature.h  signature.h~
mcs/: configure.ac
mcs/src/: Makefile.am  SocketProject.c  SocketProject.c~  SocketProject.h  cryptog.c  foo  server.c  server.c~  signature.c  signature.c~  signature.h  signature.h~
mtds/: configure.ac
mtds/src/: MTDS.c  MTDS.c~  Makefile.am  SocketProject.c  SocketProject.c~  SocketProject.h  cryptog.c  cryptog.c~  cryptog.h  foo  main.c  main.c~  signature.c  signature.c~  signature.h
