## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mcs

mcs_SOURCES =  \
	cryptog.c \
	cryptog.h \
	server.c \
	signature.c \
	signature.h \
	SocketProject.c \
	SocketProject.h

mcs_LDFLAGS = 

mcs_LDADD = 

