## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mtds

mtds_SOURCES = \
	main.c \
	cryptog.c \
	cryptog.h \
	main.c \
	MTDS.c \
	signature.c \
	signature.h \
	SocketProject.c \
	SocketProject.h

mtds_LDFLAGS = 

mtds_LDADD = 

